--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,89 +1,62 @@
 name: bookstore
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
 env:
   AWS_REGION: us-east-2
-  # Define the ECR repository names for your two custom applications
   BACKEND_REPOSITORY: bookstore-backend
   FRONTEND_REPOSITORY: bookstore-frontend
+
 jobs:
   build_and_push:
-    name: Build, Tag, and Push Images to ECR
+    name: Build and Push Backend & Frontend Images
     runs-on: ubuntu-latest
+
     permissions:
-      contents: read # Required to clone the repository code
-      id-token: write # Required for AWS authentication (especially useful for OIDC)
+      contents: read
+      id-token: write
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-        
-      # ----------------------------------------------------------------
-      # 4. BACKEND (Spring Boot) BUILD AND PUSH
-      # ----------------------------------------------------------------
-      - name: Build, tag, and push backend image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        run: |
-          # Create an immutable tag from the first 8 characters of the Git SHA
-          IMAGE_TAG=$(echo $GITHUB_SHA | cut -c 1-8)
-          LATEST_TAG=latest
-          
-          # Construct the full ECR Image URIs
-          IMAGE_URI_SHA=$ECR_REGISTRY/$BACKEND_REPOSITORY:$IMAGE_TAG
-          IMAGE_URI_LATEST=$ECR_REGISTRY/$BACKEND_REPOSITORY:$LATEST_TAG
-          
-          echo "Building backend image: $IMAGE_URI_SHA"
-          
-          # Build the image using the Dockerfile in the root context (./)
-          # Tags the image with both the SHA and 'latest' tags
-          docker build -t $IMAGE_URI_SHA -t $IMAGE_URI_LATEST .
-          
-          echo "Pushing backend images to ECR..."
-          # Push both tagged images to the Amazon ECR repository
-          docker push $IMAGE_URI_SHA
-          docker push $IMAGE_URI_LATEST
 
-      # ----------------------------------------------------------------
-      # 5. FRONTEND (React) BUILD AND PUSH
-      # ----------------------------------------------------------------
-      - name: Build, tag, and push frontend image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      - name: Check ECR Login Status
         run: |
-          # Create image tags
-          IMAGE_TAG=$(echo $GITHUB_SHA | cut -c 1-8)
-          LATEST_TAG=latest
-          
-          # Construct the full ECR Image URIs
-          IMAGE_URI_SHA=$ECR_REGISTRY/$FRONTEND_REPOSITORY:$IMAGE_TAG
-          IMAGE_URI_LATEST=$ECR_REGISTRY/$FRONTEND_REPOSITORY:$LATEST_TAG
-          
-          echo "Building frontend image: $IMAGE_URI_SHA"
-          
-          # Build the image using the Dockerfile located in the ./Frontend directory
-          # CRITICAL: Build arguments are now sourced from GitHub Secrets for security/deployability.
-          docker build \
-            --build-arg REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} \
-            --build-arg REACT_APP_STRIPE_PUBLISHABLE_KEY=${{ secrets.REACT_APP_STRIPE_PUBLISHABLE_KEY }} \
-            -f ./Frontend/Dockerfile \
-            -t $IMAGE_URI_SHA \
-            -t $IMAGE_URI_LATEST \
-            ./Frontend
-            
-          echo "Pushing frontend images to ECR..."
-          # Push both tagged images to the Amazon ECR repository
-          docker push $IMAGE_URI_SHA
-          docker push $IMAGE_URI_LATEST
+          echo "ECR Login successful. Registry: ${{ steps.login-ecr.outputs.registry }}"
+          docker info
+
+
+
+      # ---------------------- FRONTEND IMAGE ------------------------
+      - name: Build Frontend Image
+        run: |
+          docker build -t ${{ env.FRONTEND_REPOSITORY }}:latest ./Frontend
+
+      - name: Tag Frontend Image
+        run: |
+          docker tag ${{ env.FRONTEND_REPOSITORY }}:latest \
+            ${{ steps.login-ecr.outputs.registry }}/${{ env.FRONTEND_REPOSITORY }}:latest
+
+          docker tag ${{ env.FRONTEND_REPOSITORY }}:latest \
+            ${{ steps.login-ecr.outputs.registry }}/${{ env.FRONTEND_REPOSITORY }}:${{ github.sha }}
+
+      - name: Push Frontend Image
+        run: |
+          docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.FRONTEND_REPOSITORY }}:latest
+          docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.FRONTEND_REPOSITORY }}:${{ github.sha }}
