--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       # ---------------------------
-      # SSH into EC2
+      # Set up SSH key for EC2
       # ---------------------------
       - name: Copy SSH key
         run: |
@@ -24,23 +24,28 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key
           chmod 600 ~/.ssh/ec2_key
 
-      - name: Deploy on EC2
+      - name: Test SSH Connection (Optional)
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo 'SSH connection successful!'"
+
+      # ---------------------------
+      # Deploy on EC2
+      # ---------------------------
+      - name: Deploy Docker containers
         run: |
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-          
+
           # Login to ECR
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} \
             | docker login --username AWS --password-stdin ${{ secrets.ECR_URI }}
 
-          # Pull new images
+          # Pull latest images
           docker pull ${{ secrets.ECR_URI }}/bookstore-backend:latest
           docker pull ${{ secrets.ECR_URI }}/bookstore-frontend:latest
 
-          # Stop old containers (ignore errors)
+          # Stop and remove old containers (ignore errors)
           docker stop backend-container || true
           docker stop frontend-container || true
-
-          # Remove old containers
           docker rm backend-container || true
           docker rm frontend-container || true
 
