Disable trigger for build-images workflow
Comment out the workflow_run trigger for build-images.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy to EC2
 
 on:
   workflow_run:
-    workflows: ["build-images"]   # Trigger when build-images workflow completes
-    types:
-      - completed
+#    workflows: ["build-images"]   # Trigger when build-images workflow completes
+#    types:
+#      - completed
 
 jobs:
   deploy:
