--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,20 @@
-name: Deploy to EC2
+#name: Deploy to EC2
 
-on:
-  workflow_run:
+#on:
+#  workflow_run:
 #    workflows: ["build-images"]   # Trigger when build-images workflow completes
 #    types:
 #      - completed
 
+
+name: Deploy to EC2
+
+on:
+  workflow_dispatch:   # Manual trigger from GitHub Actions UI
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Checkout code
