--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,24 @@ jobs:
       # ---------------------------
       - name: Checkout code
         uses: actions/checkout@v3
+      
 
+      
       # ---------------------------
-      # Set up SSH key
+      # Set up SSH key safely
       # ---------------------------
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key
+          # Write the secret to a file
+          echo "${{ secrets.EC2_SSH_KEY }}" | tr -d '\r' > ~/.ssh/ec2_key
           chmod 600 ~/.ssh/ec2_key
+          # Optional: verify the key format
+          head -n 3 ~/.ssh/ec2_key
+
+
+
+      
 
       # ---------------------------
       # Test SSH Connection (Optional but recommended)
