--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,1 +1,54 @@
+name: Deploy to EKS
+
+on:
+  workflow_dispatch:
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      # ---------------------------
+      # Checkout repository
+      # ---------------------------
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # ---------------------------
+      # Configure AWS credentials
+      # ---------------------------
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # ---------------------------
+      # Setup kubectl
+      # ---------------------------
+      - name: Install kubectl
+        run: |
+          curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.29.0/bin/linux/amd64/kubectl
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+
+      # ---------------------------
+      # Update kubeconfig for EKS
+      # ---------------------------
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} \
+            --name ${{ secrets.EKS_CLUSTER_NAME }}
+
+      # ---------------------------
+      # Deploy to EKS
+      # ---------------------------
+      - name: Deploy to EKS
+        run: |
+          kubectl apply -f k8s/
+
+          # Force rollout of latest images
+          kubectl rollout restart deployment backend-deployment
+          kubectl rollout restart deployment frontend-deployment
 
