--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,4 +1,4 @@
-name: Deploy to EKS
+name: Deploy to EKS (Manual)
 
 on:
   workflow_dispatch:
@@ -8,15 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ---------------------------
-      # Checkout repository
-      # ---------------------------
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # ---------------------------
-      # Configure AWS credentials
-      # ---------------------------
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
@@ -24,31 +18,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # ---------------------------
-      # Setup kubectl
-      # ---------------------------
       - name: Install kubectl
         run: |
           curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.29.0/bin/linux/amd64/kubectl
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-      # ---------------------------
-      # Update kubeconfig for EKS
-      # ---------------------------
       - name: Update kubeconfig
         run: |
-          aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} \
+          aws eks update-kubeconfig \
+            --region ${{ secrets.AWS_REGION }} \
             --name ${{ secrets.EKS_CLUSTER_NAME }}
 
-      # ---------------------------
-      # Deploy to EKS
-      # ---------------------------
       - name: Deploy to EKS
         run: |
           kubectl apply -f k8s/
-
-          # Force rollout of latest images
           kubectl rollout restart deployment backend-deployment
           kubectl rollout restart deployment frontend-deployment
-
