--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,4 +1,4 @@
-name: Deploy to EKS (Manual)
+name: Create EKS + Deploy (Manual)
 
 on:
   workflow_dispatch:
@@ -8,29 +8,62 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Configure AWS credentials
+      # ---------------------------
+      # Configure AWS Credentials
+      # ---------------------------
+      - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-region: us-east-2
 
+      # ---------------------------
+      # Setup Terraform
+      # ---------------------------
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.0
+
+      # ---------------------------
+      # Terraform Init
+      # ---------------------------
+      - name: Terraform Init
+        run: terraform init
+
+      # ---------------------------
+      # Terraform Apply
+      # ---------------------------
+      - name: Terraform Apply
+        run: |
+          terraform apply -auto-approve
+
+      # ---------------------------
+      # Install kubectl
+      # ---------------------------
       - name: Install kubectl
         run: |
           curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.29.0/bin/linux/amd64/kubectl
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-      - name: Update kubeconfig
+      # ---------------------------
+      # Update kubeconfig from EKS
+      # ---------------------------
+      - name: Configure kubeconfig
         run: |
           aws eks update-kubeconfig \
-            --region ${{ secrets.AWS_REGION }} \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
+            --region us-east-2 \
+            --name bookstore-eks
 
-      - name: Deploy to EKS
+      # ---------------------------
+      # Deploy Kubernetes manifests
+      # ---------------------------
+      - name: Deploy App to EKS
         run: |
           kubectl apply -f k8s/
           kubectl rollout restart deployment backend-deployment
