--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,70 +1,53 @@
-name: Create EKS + Deploy (Manual)
-
+name: Terraform Pipeline
+ 
 on:
-  workflow_dispatch:
-
+  push:
+    branches:
+      - main
+      - develop
+  workflow_dispatch:   # manual trigger
+ 
+env:
+  AWS_REGION: eu-west-3
+  TERRAFORM_WORKING_DIR: terraform-code-eks
+ 
 jobs:
-  deploy:
+  terraform-apply:
+    name: Terraform Apply
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    permissions:
+      contents: read
+      id-token: write
+ 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      # ---------------------------
-      # Configure AWS Credentials
-      # ---------------------------
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v3
+      # 1️⃣ Checkout code
+      - name: Checkout code
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
+ 
+      # 2️⃣ Configure AWS credentials using secrets
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@8b8c83f061aa565ad33187ddf2af0a8370d4d420
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-
-      # ---------------------------
-      # Setup Terraform
-      # ---------------------------
+          aws-region: ${{ env.AWS_REGION }}
+ 
+      # 3️⃣ Setup Terraform
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@712b43959e9be7e82c34d18450fa5ec3237af3f1
         with:
-          terraform_version: 1.5.0
-
-      # ---------------------------
-      # Terraform Init
-      # ---------------------------
+          terraform_version: 1.5.7
+ 
+      # 4️⃣ Terraform Init
       - name: Terraform Init
-        run: terraform init
-
-      # ---------------------------
-      # Terraform Apply
-      # ---------------------------
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} init -input=false
+ 
+      # 5️⃣ Terraform Plan
+      - name: Terraform Plan
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} plan -out=tfplan -input=false
+ 
+      # 6️⃣ Terraform Apply
       - name: Terraform Apply
-        run: |
-          terraform apply -auto-approve
-
-      # ---------------------------
-      # Install kubectl
-      # ---------------------------
-      - name: Install kubectl
-        run: |
-          curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.29.0/bin/linux/amd64/kubectl
-          chmod +x kubectl
-          sudo mv kubectl /usr/local/bin/
-
-      # ---------------------------
-      # Update kubeconfig from EKS
-      # ---------------------------
-      - name: Configure kubeconfig
-        run: |
-          aws eks update-kubeconfig \
-            --region us-east-2 \
-            --name bookstore-eks
-
-      # ---------------------------
-      # Deploy Kubernetes manifests
-      # ---------------------------
-      - name: Deploy App to EKS
-        run: |
-          kubectl apply -f k8s/
-          kubectl rollout restart deployment backend-deployment
-          kubectl rollout restart deployment frontend-deployment
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} apply -input=false -auto-approve
+ 
