--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,60 +1,42 @@
-name: Terraform Pipeline
- 
+name: Terraform EKS Pipeline
+
 on:
   push:
     branches:
       - main
       - develop
-  workflow_dispatch:   # manual trigger
- 
+  workflow_dispatch:
+
 env:
   AWS_REGION: us-east-2
   TERRAFORM_WORKING_DIR: terraform-code-eks
- 
+
 jobs:
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
-    permissions:
-      contents: read
-      id-token: write
- 
+
     steps:
-      # 1️⃣ Checkout code
       - name: Checkout code
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
- 
-      # 2️⃣ Configure AWS credentials using secrets
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@8b8c83f061aa565ad33187ddf2af0a8370d4d420
+        uses: actions/checkout@v3
+
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
- 
-      # 3️⃣ Setup Terraform
+
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@712b43959e9be7e82c34d18450fa5ec3237af3f1
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.5.7
- 
-      # 4️⃣ Terraform Init
+
       - name: Terraform Init
         run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} init -input=false
- 
-      # 5️⃣ Terraform Plan
+
       - name: Terraform Plan
         run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} plan -out=tfplan -input=false
 
-      # ✅ Import existing IAM roles (Fix for EntityAlreadyExists error)
-      - name: Import existing IAM roles
-        run: |
-          terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} import aws_iam_role.eks_cluster bookstore-eks-cluster-role
-          terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} import aws_iam_role.node_group bookstore-eks-node-role
-        continue-on-error: true
- 
-      # 6️⃣ Terraform Apply
       - name: Terraform Apply
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} apply -input=false -auto-approve
- 
+        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} apply -auto-approve -input=false
