Update EKS pipeline for Terraform deployment

--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,42 +1,46 @@
-name: Terraform EKS Pipeline
+name: Terraform EKS Deployment
 
 on:
   push:
     branches:
       - main
-      - develop
   workflow_dispatch:
 
 env:
   AWS_REGION: us-east-2
-  TERRAFORM_WORKING_DIR: terraform-code-eks
+  TF_DIR: terraform-code-eks
 
 jobs:
-  terraform-apply:
-    name: Terraform Apply
+  terraform:
+    name: Apply Terraform
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    permissions:
+      id-token: write
+      contents: read
 
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v3
+    steps:
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Configure AWS Credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::<YOUR_ACCOUNT_ID>:role/<YOUR_GITHUB_OIDC_ROLE>
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.5.7
 
       - name: Terraform Init
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} init -input=false
+        run: terraform -chdir=${{ env.TF_DIR }} init
+
+      - name: Terraform Validate
+        run: terraform -chdir=${{ env.TF_DIR }} validate
 
       - name: Terraform Plan
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} plan -out=tfplan -input=false
+        run: terraform -chdir=${{ env.TF_DIR }} plan -out=tfplan
 
       - name: Terraform Apply
-        run: terraform -chdir=${{ env.TERRAFORM_WORKING_DIR }} apply -auto-approve -input=false
+        run: terraform -chdir=${{ env.TF_DIR }} apply -auto-approve tfplan
