--- a/.github/workflows/bookstore-eks.yml
+++ b/.github/workflows/bookstore-eks.yml
@@ -1,9 +1,9 @@
 name: Terraform EKS Deployment
 
 on:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
   workflow_dispatch:
 
 env:
