--- a/.github/workflows/deploy-monitoring.yml
+++ b/.github/workflows/deploy-monitoring.yml
@@ -47,7 +47,9 @@ jobs:
 
       # Terraform Plan
       - name: Terraform Plan (Monitoring Only)
-        run: terraform -chdir=${TF_DIR} plan \
+        run: |
+          -terraform -chdir=${TF_DIR} plan \
+          -target=kubernetes_namespace.monitoring \
           -target=kubernetes_config_map.prometheus_config \
           -target=kubernetes_config_map.alertmanager_config \
           -target=kubernetes_deployment_v1.prometheus \
@@ -55,12 +57,16 @@ jobs:
           -target=kubernetes_deployment_v1.alertmanager \
           -target=kubernetes_service_v1.alertmanager
 
+
       # Terraform Apply
       - name: Terraform Apply (Monitoring Only)
-        run: terraform -chdir=${TF_DIR} apply -auto-approve \
-          -target=kubernetes_config_map.prometheus_config \
-          -target=kubernetes_config_map.alertmanager_config \
-          -target=kubernetes_deployment_v1.prometheus \
-          -target=kubernetes_service_v1.prometheus \
-          -target=kubernetes_deployment_v1.alertmanager \
-          -target=kubernetes_service_v1.alertmanager
+        run: |
+          terraform -chdir=${TF_DIR} apply -auto-approve \
+            -target=kubernetes_namespace.monitoring \
+            -target=kubernetes_config_map.prometheus_config \
+            -target=kubernetes_config_map.alertmanager_config \
+            -target=kubernetes_deployment_v1.prometheus \
+            -target=kubernetes_service_v1.prometheus \
+            -target=kubernetes_deployment_v1.alertmanager \
+            -target=kubernetes_service_v1.alertmanager
+
